remove usage of deprecated way and use current acceptable way